--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.19.7",
-    "gatsby-image": "^2.2.39",
+    "gatsby-image": "^2.2.40",
+    "gatsby-plugin-catch-links": "^2.1.25",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-remark-images": "^3.1.44",
     "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-transformer-remark": "^2.6.50",
     "gatsby-transformer-sharp": "^2.3.13",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
