--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-catch-links": "^2.1.25",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
+    "gatsby-plugin-preact": "^3.1.27",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-styled-components": "^3.1.19",
