--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "portfolio-v5",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Adam Parsons",
+    "email": "adam@adamparsons.me"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,16 +13,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.1.0",
+    "@types/mdx": "^2.0.10",
+    "next": "14.1.0",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5"
   }
 }
